# mello

./: .gitignore  LICENSE  Makefile  README.md  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt
mello/: configloader.py  emojis.py  exceptions.py  main.py
mello/cogs/: hello.py  prefix.py
